--- a/XYZReader/src/main/res/values-land/dimens.xml
+++ b/XYZReader/src/main/res/values-land/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <!-- Detail Activity Dimensions -->
-    <dimen name="article_image_height">224dp</dimen>
+    <dimen name="logo_height">68dp</dimen>
+    <dimen name="detail_app_bar_height">260dp</dimen>
     <dimen name="article_body_horizontal_margin">112dp</dimen>
 </resources>
