--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -28,7 +28,7 @@
     <dimen name="read_more_button_start_padding">16dp</dimen>
     <dimen name="read_more_button_bottom_padding">96dp</dimen>
     <dimen name="read_more_button_text_size">18sp</dimen>
-    <dimen name="article_image_height">300dp</dimen>
+    <dimen name="article_image_height">@dimen/detail_app_bar_height</dimen>
 
 
 
