--- a/XYZReader/src/main/res/layout-v21/article_recycler_view.xml
+++ b/XYZReader/src/main/res/layout-v21/article_recycler_view.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:layout_width="wrap_content"
+<android.support.v7.widget.RecyclerView android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recycler_view"
     android:clipToPadding="false"
     android:paddingLeft="@dimen/recycler_list_padding"
     android:paddingRight="@dimen/recycler_list_padding"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     xmlns:android="http://schemas.android.com/apk/res/android" />
