--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,12 +16,11 @@
 -->
 
 <resources>
-    <color name="primaryColor">#f4db95</color>
-    <color name="primaryLightColor">#ffffc6</color>
-    <color name="primaryDarkColor">#000000</color>
-    <color name="secondaryColor">#ffb300</color>
-    <color name="secondaryLightColor">#ffe54c</color>
-    <color name="secondaryDarkColor">#c68400</color>
+    <color name="primaryColor">#009688</color>
+    <color name="primaryDarkColor">#00796B</color>
+    <color name="secondaryColor">#FF5252</color>
+
+
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
 
@@ -34,7 +33,7 @@
 
     <color name="max_width_linear_bgColor">#fff</color>
 
-    <color name="first_wordColor">@android:color/holo_orange_dark</color>
+    <color name="first_wordColor">@color/cont_reading_color</color>
     <color name="cont_reading_color">@android:color/holo_orange_dark</color>
 
 </resources>
